<resources>
    <string name="app_name">Gleam</string>

    <!--    My Custom Strings-->
    <string name="not_member">Not a member yet?</string>
    <string name="already_a_member">Already a member?</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_see_you">Nice to see you again.</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="need_help">Need help?</string>
    <string name="hello_there">Hello There!</string>
    <string name="hi_there">Hi There!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="video_pro">Video Pro</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="meeting_code">Meeting Code</string>
    <string name="enter_code_here">Please enter a unique code here to start video conferencing</string>
    <string name="join_meeting">Join Meeting</string>

</resources>